name:                   hfuse3
version:                0.1.0.0
license:                BSD3
license-File:           LICENSE
author:                 Jeremy Bobbio
maintainer:             example@example.com
synopsis:               hfuse3 is a binding for the Linux FUSE 3 library.
description:            Bindings for the FUSE library, compatible with Linux.
homepage:               https://github.com/fyrchik/hfuse3
category:               System
stability:              Experimental
cabal-Version:          >= 1.10
build-Type:             Simple
extra-source-files:
  CHANGELOG.md
  README.md

flag examples
  default: False


library
  hs-source-dirs:         src
  build-depends:          base >= 4 && < 5, unix, bytestring
  exposed-modules:        System.Fuse
  other-modules:          System.Fuse.Types, System.Fuse.FuseOperations
  default-Extensions:     ForeignFunctionInterface ScopedTypeVariables EmptyDataDecls
  Includes:               dirent.h, fuse.h, fcntl.h, sys/statfs.h
  Include-Dirs:           /usr/include, /usr/local/include, .

  cc-options:             "-DFUSE_USE_VERSION=30"
  cc-options:             "-D_FILE_OFFSET_BITS=64"

  extra-libraries:        fuse3
  extra-lib-dirs:         /usr/local/lib
  default-language:       Haskell2010

executable HelloFS
  hs-source-dirs: app
  if flag(examples)
    buildable: True
    build-depends:  base >= 4 && < 5, hfuse3, unix, bytestring
  else
    buildable: False
  main-is: HelloFS.hs
  ghc-options: -threaded
  default-language: Haskell2010

source-repository head
    type:       git
    location:   https://github.com/fyrchik/hfuse3.git
